# brief

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
brief/: __init__.py  cli.py  context.py  discovery.py  updater.py  validator.py
brief/mcp/: __init__.py  server.py
docs/: INSTALLATION.md  MCP_SERVER.md
examples/python-project/: AGENTS.md  CLAUDE.md  README.md
examples/python-project/.github/: copilot-instructions.md
tests/: test_context.py  test_discovery.py  test_updater.py
