[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-brief"
version = "0.1.0"
description = "Brief your AI coding assistants once, update them all"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ai", "coding-assistant", "claude", "copilot", "cursor", "instructions"]

dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
brief = "brief.cli:main"
brief-mcp = "brief.mcp.server:main"

[project.urls]
Homepage = "https://github.com/Nas4146/brief"
Repository = "https://github.com/Nas4146/brief"
Issues = "https://github.com/Nas4146/brief/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["brief*"]

[tool.setuptools.package-data]
brief = ["templates/**/*.yaml", "templates/**/*.md"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
